[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
authors = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: MacOS',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.9',
]
dependencies = [
  'numpy>=1.21',
  'packaging',
  'psutil',
]
description = 'Wiki for the EEG platform at the Human Neuroscience Platform in Geneva.'
keywords = [
  'eeg',
  'neuroscience',
  'python',
  'tests',
  'timings',
  'wiki',
]
license = {file = 'LICENSE'}
maintainers = [
  {email = 'mathieu.scheltienne@fcbg.ch', name = 'Mathieu Scheltienne'},
]
name = 'eeg_wiki'
readme = 'README.md'
requires-python = '>=3.9'
version = '0.1.0'

[project.optional-dependencies]
all = [
  'eeg_wiki[build]',
  'eeg_wiki[doc]',
  'eeg_wiki[stubs]',
  'eeg_wiki[style]',
  'eeg_wiki[test]',
]
build = [
  'build',
  'twine',
]
doc = [
  'furo',
  'matplotlib',
  'memory-profiler',
  'numpydoc',
  'sphinx',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-gallery',
  'sphinx-issues',
  'sphinxcontrib-bibtex',
]
full = [
  'eeg_wiki[all]',
]
stubs = [
  'mypy',
  'ruff>=0.6.0',
]
style = [
  'bibclean',
  'codespell[toml]>=2.2.4',
  'pre-commit',
  'ruff>=0.6.0',
  'toml-sort',
  'yamllint',
]
test = [
  'pytest-cov',
  'pytest-timeout',
  'pytest>=8.0',
]

[project.scripts]
eeg_wiki-sys_info = 'eeg_wiki.commands.sys_info:run'

[project.urls]
documentation = 'https://eeg-wiki.hnp.fcbg.ch/'
homepage = 'https://eeg-wiki.hnp.fcbg.ch/'
source = 'https://github.com/fcbg-hnp-meeg/eeg_wiki'
tracker = 'https://github.com/fcbg-hnp-meeg/eeg_wiki/issues'

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = '.codespellignore'
skip = 'build,.git,.mypy_cache,.pytest_cache'

[tool.coverage.report]
exclude_lines = [
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'pragma: no cover',
]
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  '**/__init__.py',
  '**/conftest.py',
  '**/eeg_wiki/_version.py',
  '**/eeg_wiki/commands/*',
  '**/eeg_wiki/utils/_fixes.py',
  '**/tests/**',
]

[tool.pytest.ini_options]
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
minversion = '8.0'

[tool.ruff]
extend-exclude = []
line-length = 88
target-version = 'py39'

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = []
select = ['A', 'B', 'D', 'E', 'F', 'G', 'I', 'LOG', 'NPY', 'PIE', 'PT', 'T20', 'UP', 'W']

[tool.ruff.lint.per-file-ignores]
'*' = [
  'B904', # 'Within an except clause, raise exceptions with raise ... from ...'
  'D100', # 'Missing docstring in public module'
  'D104', # 'Missing docstring in public package'
  'D107', # 'Missing docstring in __init__'
  'UP007', # 'Use `X | Y` for type annotations', requires python 3.10
]
'*.pyi' = ['E501']
'__init__.py' = ['F401']

[tool.ruff.lint.pydocstyle]
convention = 'numpy'
ignore-decorators = ["meg_wiki.utils._docs.copy_doc"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ['eeg_wiki*tests']
include = ['eeg_wiki*']

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
